--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: KitPvP
-main: net.skycade.kitpvp.KitPVP
+main: net.skycade.kitpvp.KitPvP
 version: 2.0.0-SNAPSHOT
 author: ["WhiteWalker72", "Riccardo Bello (RickyB98)"]
