--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
 
     <repositories>
         <repository>
-            <id>project.local</id>
-            <url>file:///${project.basedir}/libraries</url>
+            <id>my</id>
+            <url>file://${project.basedir}/jars</url>
         </repository>
         <repository>
             <id>spigot-repo</id>
@@ -80,8 +80,7 @@
             <groupId>net.skycade</groupId>
             <artifactId>SkycadeCore</artifactId>
             <version>1.0.0-SNAPSHOT</version>
-            <scope>system</scope>
-            <systemPath>${basedir}/jars/SkycadeCore-1.0.0-SNAPSHOT.jar</systemPath>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 </project>
