--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,8 @@
 image: maven:3-jdk-8
 build:
-  script: "mvn clean package install javadoc:javadoc"
+  script:
+  - mvn org.apache.maven.plugins:maven-install-plugin:2.3.1:install-file -Dfile=jars/SkycadeCore-1.0.0-SNAPSHOT.jar -DgroupId=net.skycade -DartifactId=SkycadeCore -Dversion=1.0.0-SNAPSHOT -Dpackaging=jar
+  - mvn clean package install javadoc:javadoc
   artifacts:
     name: "SkycadeKitPVP"
     paths:
