--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
 name: KitPvP
 main: net.skycade.kitpvp.KitPvP
-version: 2.1.4-SNAPSHOT
+version: ${project.version}
 author: ["WhiteWalker72", "Riccardo Bello (RickyB98)"]
