--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.skycade</groupId>
-    <artifactId>kitpvp</artifactId>
+    <artifactId>SkycadeKitPvP</artifactId>
     <version>2.1.13-SNAPSHOT</version>
 
     <properties>
