--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,8 @@
 name: KitPvP
 main: net.skycade.kitpvp.KitPvP
-version: 2.1.18-SNAPSHOT
+version: 2.1.19-SNAPSHOT
 author: ["WhiteWalker72", "Riccardo Bello (RickyB98)"]
 commands:
     givekey:
+    keys:
+    givekeys:
