--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,8 @@
 name: KitPvP
 main: net.skycade.kitpvp.KitPvP
-version: 3.0.4-SNAPSHOT
+version: 3.0.5-SNAPSHOT
 author: ["WhiteWalker72", "Riccardo Bello (RickyB98)"]
+depend: [SkycadeCore]
 commands:
     givekey:
     keys:
