--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,9 +1,13 @@
 name: KitPvP
 main: net.skycade.kitpvp.KitPvP
-version: 3.0.5-SNAPSHOT
+version: 3.0.6-SNAPSHOT
 author: ["WhiteWalker72", "Riccardo Bello (RickyB98)"]
 depend: [SkycadeCore]
 commands:
     givekey:
     keys:
     givekeys:
+    unlock:
+    unlockkit:
+    lock:
+    lockkit:
