--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.skycade</groupId>
     <artifactId>SkycadeKitPvP</artifactId>
-    <version>3.5.1-SNAPSHOT</version>
+    <version>3.6.0-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -74,6 +74,14 @@
             <version>1.35.1-SNAPSHOT</version>
             <scope>system</scope>
             <systemPath>${basedir}/jars/SkycadeCore-1.35.1-SNAPSHOT.jar</systemPath>
+        </dependency>
+        <!--ActionBarAPI-->
+        <dependency>
+            <groupId>com.connorlinfoot</groupId>
+            <artifactId>actionbarapi</artifactId>
+            <version>1.5.4</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/jars/ActionBarAPI-1.5.4.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
