--- a/pom.xml
+++ b/pom.xml
@@ -65,7 +65,7 @@
             <artifactId>craftbukkit</artifactId>
             <version>1.8.8-R0.1-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${basedir}/jars/craftbukkit-1.8.8.jar</systemPath>
+            <systemPath>${basedir}/dependencies/craftbukkit-1.8.8.jar</systemPath>
         </dependency>
         <!-- Skycade -->
         <dependency>
@@ -73,7 +73,7 @@
             <artifactId>SkycadeCore</artifactId>
             <version>1.35.1-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${basedir}/jars/SkycadeCore-1.35.1-SNAPSHOT.jar</systemPath>
+            <systemPath>${basedir}/dependencies/SkycadeCore-1.35.1-SNAPSHOT.jar</systemPath>
         </dependency>
         <!--ActionBarAPI-->
         <dependency>
@@ -81,7 +81,7 @@
             <artifactId>actionbarapi</artifactId>
             <version>1.5.4</version>
             <scope>system</scope>
-            <systemPath>${basedir}/jars/ActionBarAPI-1.5.4.jar</systemPath>
+            <systemPath>${basedir}/dependencies/ActionBarAPI-1.5.4.jar</systemPath>
         </dependency>
         <!--ActionBarAPI-->
         <dependency>
@@ -89,7 +89,15 @@
             <artifactId>guardianbeam</artifactId>
             <version>1.0.0</version>
             <scope>system</scope>
-            <systemPath>${basedir}/jars/GuardianBeamAPI-0.4.jar</systemPath>
+            <systemPath>${basedir}/dependencies/GuardianBeamAPI-0.4.jar</systemPath>
+        </dependency>
+        <!--CombatTagPlus-->
+        <dependency>
+            <groupId>net.minelink</groupId>
+            <artifactId>CombatTagPlus</artifactId>
+            <version>1.3.2</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/dependencies/CombatTagPlus.jar</systemPath>
         </dependency>
     </dependencies>
 </project>
