Adds Paladin, Witchdoctor, and modifies some other kits

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -3,6 +3,7 @@ main: net.skycade.kitpvp.KitPvP
 version: 4.0.0-SNAPSHOT
 author: ["WhiteWalker72", "Riccardo Bello (RickyB98)", "Taon2"]
 depend: [SkycadeCore, GuardianBeamAPI]
+softdepend: [GangsPlus]
 commands:
     givekey:
     keys:
