--- a/pom.xml
+++ b/pom.xml
@@ -99,5 +99,13 @@
             <scope>system</scope>
             <systemPath>${basedir}/dependencies/CombatTagPlus.jar</systemPath>
         </dependency>
+        <!-- GangsPlus -->
+        <dependency>
+            <groupId>net.brcdev</groupId>
+            <artifactId>gangs</artifactId>
+            <version>2.6.1</version>
+            <systemPath>${basedir}/dependencies/GangsPlus-2.6.1.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
     </dependencies>
 </project>
