--- a/pom.xml
+++ b/pom.xml
@@ -107,5 +107,13 @@
             <systemPath>${basedir}/dependencies/GangsPlus-2.6.1.jar</systemPath>
             <scope>system</scope>
         </dependency>
+        <!-- Skycade Leaderboards -->
+        <dependency>
+            <groupId>net.skycade</groupId>
+            <artifactId>SkycadeLeaderboards</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <systemPath>${basedir}/dependencies/SkycadeLeaderboards-1.0-SNAPSHOT.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
     </dependencies>
 </project>
