--- a/pom.xml
+++ b/pom.xml
@@ -115,5 +115,13 @@
             <systemPath>${basedir}/dependencies/SkycadeLeaderboards-1.0.1-SNAPSHOT.jar</systemPath>
             <scope>system</scope>
         </dependency>
+        <!-- Skycade Koth -->
+        <dependency>
+            <groupId>net.skycade</groupId>
+            <artifactId>SkycadeKoth</artifactId>
+            <version>1.0.3-SNAPSHOT</version>
+            <systemPath>${basedir}/dependencies/SkycadeKoth-1.0.3.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
     </dependencies>
 </project>
