--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
             <scope>system</scope>
             <systemPath>${basedir}/dependencies/craftbukkit-1.8.8.jar</systemPath>
         </dependency>
-        <!-- Skycade -->
+        <!-- SkycadeCore -->
         <dependency>
             <groupId>net.skycade</groupId>
             <artifactId>SkycadeCore</artifactId>
@@ -107,7 +107,7 @@
             <systemPath>${basedir}/dependencies/GangsPlus-2.6.1.jar</systemPath>
             <scope>system</scope>
         </dependency>
-        <!-- Skycade Leaderboards -->
+        <!-- SkycadeLeaderboards -->
         <dependency>
             <groupId>net.skycade</groupId>
             <artifactId>SkycadeLeaderboards</artifactId>
@@ -115,12 +115,20 @@
             <systemPath>${basedir}/dependencies/SkycadeLeaderboards-1.0.3-SNAPSHOT.jar</systemPath>
             <scope>system</scope>
         </dependency>
-        <!-- Skycade Koth -->
+        <!-- SkycadeKoth -->
         <dependency>
             <groupId>net.skycade</groupId>
             <artifactId>SkycadeKoth</artifactId>
             <version>1.0.3-SNAPSHOT</version>
             <systemPath>${basedir}/dependencies/SkycadeKoth-1.0.3.jar</systemPath>
+            <scope>system</scope>
+        </dependency>
+        <!-- SkycadeCrates -->
+        <dependency>
+            <groupId>net.skycade</groupId>
+            <artifactId>SkycadeCrates</artifactId>
+            <version>1.5.0-SNAPSHOT</version>
+            <systemPath>${basedir}/dependencies/SkycadeCrates-1.5.0-SNAPSHOT.jar</systemPath>
             <scope>system</scope>
         </dependency>
     </dependencies>
