--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,10 @@
             <id>spigot-repo</id>
             <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
         </repository>
+        <repository>
+            <id>viaversion-repo</id>
+            <url>https://repo.viaversion.com</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -130,6 +134,12 @@
             <version>1.5.0-SNAPSHOT</version>
             <systemPath>${basedir}/dependencies/SkycadeCrates-1.5.0-SNAPSHOT.jar</systemPath>
             <scope>system</scope>
+        </dependency>
+        <!--ViaVersion-->
+        <dependency>
+            <groupId>us.myles</groupId>
+            <artifactId>viaversion</artifactId>
+            <version>2.2.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
 </project>
