--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,10 @@
             <id>viaversion-repo</id>
             <url>https://repo.viaversion.com</url>
         </repository>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
     </repositories>
 
     <dependencies>
@@ -140,6 +144,12 @@
             <groupId>us.myles</groupId>
             <artifactId>viaversion</artifactId>
             <version>2.2.3-SNAPSHOT</version>
+        </dependency>
+        <!-- PremiumVanishAPI -->
+        <dependency>
+            <groupId>com.github.MyzelYam</groupId>
+            <artifactId>PremiumVanishAPI</artifactId>
+            <version>2.0.2</version>
         </dependency>
     </dependencies>
 </project>
