--- a/pom.xml
+++ b/pom.xml
@@ -99,13 +99,12 @@
             <scope>system</scope>
             <systemPath>${basedir}/dependencies/GuardianBeamAPI-0.4.jar</systemPath>
         </dependency>
-        <!--CombatTagPlus-->
         <dependency>
-            <groupId>net.minelink</groupId>
-            <artifactId>CombatTagPlus</artifactId>
-            <version>1.3.2</version>
+            <groupId>net.skycade</groupId>
+            <artifactId>SkycadeCombat</artifactId>
+            <version>1.4.0-SNAPSHOT</version>
             <scope>system</scope>
-            <systemPath>${basedir}/dependencies/CombatTagPlus.jar</systemPath>
+            <systemPath>${basedir}/dependencies/SkycadeCombat-1.4.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <!--GangsPlus-->
         <dependency>
