--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>net.skycade</groupId>
     <artifactId>SkycadeKitPvP</artifactId>
-    <version>4.1.15-SNAPSHOT</version>
+    <version>4.1.16-SNAPSHOT</version>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -144,12 +144,14 @@
             <groupId>us.myles</groupId>
             <artifactId>viaversion</artifactId>
             <version>2.2.3-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <!-- PremiumVanishAPI -->
         <dependency>
             <groupId>com.github.MyzelYam</groupId>
             <artifactId>PremiumVanishAPI</artifactId>
             <version>2.0.2</version>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
 </project>
