--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,4 +6,4 @@ depend: [SkycadeCore, GuardianBeamAPI]
 softdepend: [SkycadeLeaderboards, GangsPlus, SkycadeKoth, SkycadeCrates]
 permission:
   kitpvp.nametag.view:
-    default: op
+    default:
