KitPvP Season 5 Reset
* Disabled CTF
* Made it so doing /stats will view your own stats
* Removed Zeus from EventShop & added FireMage to the EventShop
* Buffed KTK rewards
* Added Avatar, Paintball, Reaper, and Sorcerer Kits
* Re-enabled Wizard, FireArcher, Golem, and Lover Kits
* Minor changes to other kits
* Attempt to fix soup reg (will be testing !!)
* Slightly changed the look of the scoreboard

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: KitPvP
 main: net.skycade.kitpvp.KitPvP
-version: 4.1.35-SNAPSHOT
-authors: ["WhiteWalker72", "Riccardo Bello (RickyB98)", "Taon2"]
+version: 4.41.38-SNAPSHOT
+authors: ["WhiteWalker72", "Riccardo Bello (RickyB98)", "Taon2", "NegativeKB"]
 depend: [SkycadeCore, GuardianBeamAPI]
 softdepend: [SkycadeLeaderboards, GangsPlus, SkycadeKoth, SkycadeCrates]
 permission:
